feat: add favicon and seo metadata

--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MCD-Connect | HRMS Portal</title>
+    
+    <!-- SEO & Metadata -->
+    <title>MCD HRMS | Municipal Corporation of Delhi</title>
+    <meta name="description" content="Official Human Resource Management System for the Municipal Corporation of Delhi. Manage attendance, payroll, transfers, and grievances efficiently." />
+    <meta name="keywords" content="MCD, HRMS, Delhi Municipal Corporation, Employee Portal, Attendance, Payroll, Government of Delhi" />
+    <meta name="author" content="Municipal Corporation of Delhi" />
+    <meta name="theme-color" content="#1a237e" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mcd-hrms.web.app/" />
+    <meta property="og:title" content="MCD HRMS | Employee Portal" />
+    <meta property="og:description" content="Secure and efficient HR management for MCD employees." />
+    <meta property="og:image" content="/favicon.svg" />
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
