--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- SEO & Metadata -->
-    <title>MCD HRMS | Municipal Corporation of Delhi</title>
+    <title>MCD Workforce Accountability | Municipal Corporation of Delhi</title>
     <meta name="description" content="Official Human Resource Management System for the Municipal Corporation of Delhi. Manage attendance, payroll, transfers, and grievances efficiently." />
     <meta name="keywords" content="MCD, HRMS, Delhi Municipal Corporation, Employee Portal, Attendance, Payroll, Government of Delhi" />
     <meta name="author" content="Municipal Corporation of Delhi" />
